# optime

./: .gitignore  README.md  pyproject.toml
examples/: Recipes_for_the_planet.ipynb  Untitled.ipynb  pareto_front_discrete_min_values.py
optime/: __init__.py  ga.py
tests/: test_ga.py
