[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optime"
version = "0.0.1"
authors = [
  { name="Maarten Tytgat", email="maarten.tytgat@gmail.com" },
]
description = "Quick and simple optimization package. First implemented: A genetic algorithm (GA)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
